# zeroable_crates

./: .travis.yml  Cargo.toml  Changelog.md  MIT_license  readme.md
zeroable/: Cargo.toml
zeroable/src/: assert_zeroable.rs  lib.rs  tests.rs  zeroable_docs.rs
zeroable/src/tests/: should_compile.rs  shouldnt_compile.rs
zeroable/src/tests/should_compile/: nightly.rs
zeroable_101/: Cargo.toml
zeroable_101/src/: assert_zeroable.rs  lib.rs  zeroable_docs.rs
zeroable_101/src/tests/: should_compile.rs  shouldnt_compile.rs
zeroable_101_derive/: Cargo.toml
zeroable_101_derive/src/: attribute_parsing_shared.rs  datastructure.rs  lib.rs  macros.rs  repr_attr.rs  utils.rs  zeroable_macro.rs
zeroable_101_derive/src/zeroable_macro/: attribute_parsing.rs
zeroable_derive/: Cargo.toml
zeroable_derive/src/: datastructure.rs  lib.rs  utils.rs  zeroable_macro.rs
zeroable_derive/src/zeroable_macro/: attribute_parsing.rs  tests.rs
