[package]
name = "zeroable"
description = "Provides a derive for `bytemuck::Zeroable`"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

[features]
# For improved debugging,
# prints the type name of `T` in `AssertZeroable<T>`'s ' Debug implementation.
print_type=[]

# Internal feature to enable tests that require Rust nightly.
nightly_testing=["testing"]
testing=[]

[dependencies]
bytemuck="1.0"
zeroable_derive={version="0.1.0",path="../zeroable_derive"}

