[package]
name = "zeroable"
description = "Provides a derive for `bytemuck::Zeroable`"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license="MIT/Apache-2.0"
readme="../readme.md"
repository="https://github.com/rodrimati1992/zeroable_crates"
keywords = ["no-std"]
categories = [ "no-std" ]
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../readme.md", 
    "../APACHE_license", "../MIT_license"
]

[badges]
travis-ci = { repository =  "rodrimati1992/zeroable_crates/" }

[features]
# For improved debugging,
# prints the type name of `T` in `AssertZeroable<T>`'s ' Debug implementation.
print_type=[]

# Internal feature to enable tests that require Rust nightly.
nightly_testing=["testing"]
testing=[]

[dependencies]
bytemuck="1.0"
zeroable_derive={version="0.1.0",path="../zeroable_derive"}

